@@ -343,6 +343,56 @@ AlgoliaSearchHelper.prototype.getCurrentPage = function() {
   return this.state.page;
 };
 
+AlgoliaSearchHelper.prototype.getRefinements = function( facetName ) {
+  var refinements = [];
+
+  if( this.state.isConjunctiveFacet( facetName ) ) {
+    var conjRefinements = this.state.getConjunctiveRefinements( facetName );
+    if( conjRefinements ) {
+      forEach( conjRefinements, function( r ) {
+        refinements.push( {
+          value : r,
+          type : "conjunctive"
+        } );
+      } );
+    }
+  }
+  else if( this.state.isDisjunctiveFacet( facetName ) ) {
+    var disjRefinements = this.state.getDisjunctiveRefinements( facetName );
+    if( disjRefinements ) {
+      forEach( disjRefinements, function( r ) {
+        refinements.push( {
+          value : r,
+          type : "disjunctive"
+        } );
+      } );
+    }
+  }
+
+  var excludeRefinements = this.state.getExcludeRefinements( facetName );
+  if( excludeRefinements ) {
+    forEach( excludeRefinements, function( r ) {
+      refinements.push( {
+        value : r,
+        type : "exclude"
+      } );
+    } );
+  }
+
+  var numericRefinements = this.state.getNumericRefinements( facetName );
+  if( numericRefinements ) {
+    forEach( numericRefinements, function( value, operator ) {
+      refinements.push( {
+        value : value,
+        operator : operator,
+        type : "numeric"
+      } );
+    } );
+  }
+
+  return refinements;
+};
+
 ///////////// PRIVATE
 
 /**
